# ann-dl-pedro

./: 404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: main.yaml
arquivo/: index.html
arquivo/projeto/main/: index.html
arquivo/roteiro1/main/: index.html
arquivo/roteiro2/main/: index.html
arquivo/roteiro3/main/: index.html
arquivo/roteiro4/main/: index.html
arquivo/thisdocumentation/main/: index.html
docs/: index copy.md
index copy/: index.html
projeto/main/: index.html
roteiro1/main/: index.html
roteiro2/main/: index.html
roteiro3/main/: index.html
roteiro4/main/: index.html
search/: search_index.json
thisdocumentation/main/: index.html
