[project]
name = "ann-dl-pedro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown-exec[ansi]>=1.11.0",
    "markdown-grid-tables>=0.6.0",
    "matplotlib>=3.10.6",
    "mkdocs-badges>=0.5.0",
    "mkdocs-git-authors-plugin>=0.10.0",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-glightbox>=0.5.1",
    "mkdocs-material>=9.6.18",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-render-swagger-plugin>=0.1.2",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "termynal>=0.13.1",
    "yfinance>=0.2.65",
]
